@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (May 30, 2024)"
-.Dd May 30, 2024
+.\" Modified by Ken DEGUCHI (June  1, 2024)"
+.Dd June  1, 2024
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
@@ -86,6 +86,14 @@ before build.
 See also,
 .Fl w , Fl \-no-clean .
 .Pp
+.It Fl \-cleandeps
+Clean temporary files in the
+.Ar PKG_REPLACE_DB_DIR .
+Override
+.Fl \-no-cleandeps .
+This option should be useful when the dependencies of packages are new or modified.
+See also,
+.Fl dd , Fl RR .
 .It Fl \-cleanup
 Do
 .Dq Li make clean
@@ -111,9 +119,9 @@ directory to run as fast as possible.
 See config file,
 .Ar pkg_replace.conf.sample .
 If you set
-.Fl \-no-cleandeps ,
+.Fl \-cleandeps ,
 .Nm
-does not clean this directory.
+clean this directory.
 .Pp
 This option may fail when there are dependency problems
 (e.g., packages have looped dependencies, packages removed the ports tree).
@@ -179,8 +187,9 @@ Override
 .Fl b .
 .Pp
 .It Fl \-no-cleandeps
-Do not clean
+Do not clean the
 .Ar PKG_REPLACE_DB_DIR .
+This is the default.
 See also,
 .Fl dd , Fl RR .
 .Pp
